
* GITHUB#11828: Tweak TermInSetQuery "dense" optimization to only require all terms present in a
  given field to match a term (rather than all docs in a segment). This is consistent with
  MultiTermQueryConstantScoreWrapper. (Greg Miller)

* GITHUB#11876: Use ByteArrayComparator to speed up PointInSetQuery in single dimension case.
  (Guo Feng)

* GITHUB#11884: Simplify the logic of matchAll() in IndexSortSortedNumericDocValuesRangeQuery. (Lu Xugang)

Other
---------------------

* GITHUB#11856: Fix nanos to millis conversion for tests (Marios Trivyzas)

* LUCENE-10423: Remove usages of System.currentTimeMillis() from tests. (Marios Trivyzas)

* GITHUB#11811: Upgrade google java format to 1.15.0 (Dawid Weiss)

* GITHUB#11834: Upgrade forbiddenapis to version 3.4.  (Uwe Schindler)

* LUCENE-10635: Ensure test coverage for WANDScorer by using a test query. (Zach Chen, Adrien Grand)

* GITHUB#11752: Added interface to relate a LatLonShape with another shape represented as Component2D. (Navneet Verma)

Build
---------------------

* GITHUB#11886: Upgrade to gradle 7.5.1 (Dawid Weiss)

======================== Lucene 9.4.1 =======================

Bug Fixes
---------------------
* GITHUB#11858: Fix kNN vectors format validation on large segments. This
 addresses a regression in 9.4.0 where validation could fail, preventing
 further writes or searches on the index. (Julie Tibshirani)

======================== Lucene 9.4.0 =======================

API Changes
---------------------
* LUCENE-10577: Add VectorEncoding to enable byte-encoded HNSW vectors (Michael Sokolov, Julie Tibshirani)

New Features
---------------------
* LUCENE-10654: Add new ShapeDocValuesField for LatLonShape and XYShape. (Nick Knize)

* LUCENE-10629: Support match set filtering with a query in MatchingFacetSetCounts. (Stefan Vodita, Shai Erera)

* LUCENE-10633: SortField#setOptimizeSortWithIndexedData and
  SortField#getOptimizeSortWithIndexedData were introduced to provide